--- a/priv/www/index.html
+++ b/priv/www/index.html
@@ -10,14 +10,19 @@
 
 	<script type="text/javascript" src="https://yandex.st/jquery/2.0.0/jquery.min.js"></script>
 	<script type="text/javascript" src="https://yandex.st/bootstrap/2.3.2/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="http://yandex.st/jquery/cookie/1.0/jquery.cookie.min.js"></script>
-	<script type="text/javascript" src="http://yandex.st/jquery/tmpl/1.0.0pre/jquery.tmpl.min.js"></script>
 	<script type="text/javascript" src="https://d1fxtkz8shb9d2.cloudfront.net/sockjs-0.3.min.js"></script>
+	 <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/globalize/0.1.1/globalize.min.js"></script>
 	<script type="text/javascript" src="http://cdn3.devexpress.com/jslib/13.1.4/js/dx.chartjs.js"></script>
 	<script type="text/javascript" src="/js/app.js"></script>
 </head>
 <body>
 	<div class="container">
+		<di class="row">
+			<div class="span2 col" id="tgauge"></div>
+			<div class="span2 col" id="pgauge"></div>
+			<div class="span7 lin" id="tgraph"></div>
+			<div class="span7 lin" id="pgraph"></div>
+		</div>
 	</div>
 </body>
 </html>
